--- a/notebooks/01.EDA_I.ipynb
+++ b/notebooks/01.EDA_I.ipynb
@@ -907,6 +907,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "caccfa32",
+   "metadata": {},
+   "source": [
+    "En tu análisis:\n",
+    "\n",
+    "* **Price**: Distribución sesgada a la derecha (muchos precios bajos y pocos muy altos), típica en ventas.\n",
+    "* **Quantity**: Distribución casi uniforme (las cantidades de 1 a 5 se venden con frecuencias similares).\n",
+    "* **Total Sales**: Distribución sesgada a la derecha (muchas ventas bajas y pocas muy altas)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "id": "ea3de73a",
@@ -3715,6 +3727,16 @@
     "outliers_tabla = outliers_tabla.dropna(how='all')  # Eliminar columnas sin outliers\n",
     "print(\"Tabla de outliers detectados:\")\n",
     "outliers_tabla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82af4bee",
+   "metadata": {},
+   "source": [
+    "**Interpretación:**\n",
+    "\n",
+    "* Muestra una tabla donde se ve que hay en total 11 outliers en la columna `Total Sales`, lo cual lo vamos a verificar si son outliers en la Limpieza de datos"
    ]
   },
   {
