--- a/notebooks/02.Data_Cleaning.ipynb
+++ b/notebooks/02.Data_Cleaning.ipynb
@@ -505,12 +505,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "21bf3ec5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Unificar formatos de texto par"
+    "# Unificar formatos de texto (mayúsculas/minúsculas, espacios, tildes) para los campos de texto\n",
+    "# Determinamos las columnas de tipo object\n",
+    "columnas_texto = datos.select_dtypes(include=['object']).columns\n",
+    "# Aplicamos la normalización a cada columna de texto\n",
+    "for col in columnas_texto:\n",
+    "    datos[col] = datos[col].str.title()  # Convertir a título (capitalizar la primera letra de cada palabra)\n",
+    "    datos[col] = datos[col].str.strip()  # Eliminar espacios al inicio y al final\n",
+    "    datos[col] = datos[col].str.normalize('NFKD').str.encode('ascii', errors='ignore').str.decode('utf-8')  # Eliminar tildes\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "271de117",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Total Sales</th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Customer Location</th>\n",
+       "      <th>Payment Method</th>\n",
+       "      <th>Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ord0001</td>\n",
+       "      <td>2025-03-14</td>\n",
+       "      <td>Running Shoes</td>\n",
+       "      <td>Footwear</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>180</td>\n",
+       "      <td>Emma Clark</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Debit Card</td>\n",
+       "      <td>Cancelled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ord0002</td>\n",
+       "      <td>2025-03-20</td>\n",
+       "      <td>Headphones</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400</td>\n",
+       "      <td>Emily Johnson</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>Debit Card</td>\n",
+       "      <td>Pending</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ord0003</td>\n",
+       "      <td>2025-02-15</td>\n",
+       "      <td>Running Shoes</td>\n",
+       "      <td>Footwear</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2</td>\n",
+       "      <td>120</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>Denver</td>\n",
+       "      <td>Amazon Pay</td>\n",
+       "      <td>Cancelled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ord0004</td>\n",
+       "      <td>2025-02-19</td>\n",
+       "      <td>Running Shoes</td>\n",
+       "      <td>Footwear</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>180</td>\n",
+       "      <td>Olivia Wilson</td>\n",
+       "      <td>Dallas</td>\n",
+       "      <td>Credit Card</td>\n",
+       "      <td>Pending</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ord0005</td>\n",
+       "      <td>2025-03-10</td>\n",
+       "      <td>Smartwatch</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3</td>\n",
+       "      <td>450</td>\n",
+       "      <td>Emma Clark</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Debit Card</td>\n",
+       "      <td>Pending</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID       Date        Product     Category  Price  Quantity  \\\n",
+       "0  Ord0001 2025-03-14  Running Shoes     Footwear     60         3   \n",
+       "1  Ord0002 2025-03-20     Headphones  Electronics    100         4   \n",
+       "2  Ord0003 2025-02-15  Running Shoes     Footwear     60         2   \n",
+       "3  Ord0004 2025-02-19  Running Shoes     Footwear     60         3   \n",
+       "4  Ord0005 2025-03-10     Smartwatch  Electronics    150         3   \n",
+       "\n",
+       "   Total Sales  Customer Name Customer Location Payment Method     Status  \n",
+       "0          180     Emma Clark          New York     Debit Card  Cancelled  \n",
+       "1          400  Emily Johnson     San Francisco     Debit Card    Pending  \n",
+       "2          120       John Doe            Denver     Amazon Pay  Cancelled  \n",
+       "3          180  Olivia Wilson            Dallas    Credit Card    Pending  \n",
+       "4          450     Emma Clark          New York     Debit Card    Pending  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.head()"
    ]
   },
   {
