--- a/notebooks/02.Data_Cleaning.ipynb
+++ b/notebooks/02.Data_Cleaning.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "4913a7c3",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "596395da",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "ed214872",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "4          450     Emma Clark          New York     Debit Card    Pending  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "1dd85dcb",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "261bc2ef",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "4          450     Emma Clark          New York     Debit Card    Pending  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "3e55babf",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "id": "802e7fc9",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "id": "21bf3ec5",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "271de117",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "4          450     Emma Clark          New York     Debit Card    Pending  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "id": "62e2ce0c",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,7 @@
        "230         4000     Jane Smith            Boston    Credit Card  Cancelled  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "id": "f40afb3a",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "3cf66e33",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1131,7 @@
        "4  2025     March   10  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
+   "id": "287d68f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Order ID       Date        Product     Category  Price  Quantity  \\\n",
+      "0    Ord0001 2025-03-14  Running Shoes     Footwear     60         3   \n",
+      "1    Ord0002 2025-03-20     Headphones  Electronics    100         4   \n",
+      "2    Ord0003 2025-02-15  Running Shoes     Footwear     60         2   \n",
+      "3    Ord0004 2025-02-19  Running Shoes     Footwear     60         3   \n",
+      "4    Ord0005 2025-03-10     Smartwatch  Electronics    150         3   \n",
+      "..       ...        ...            ...          ...    ...       ...   \n",
+      "245  Ord0246 2025-03-17        T-Shirt     Clothing     20         2   \n",
+      "246  Ord0247 2025-03-30          Jeans     Clothing     40         1   \n",
+      "247  Ord0248 2025-03-05        T-Shirt     Clothing     20         2   \n",
+      "248  Ord0249 2025-03-08     Smartwatch  Electronics    150         3   \n",
+      "249  Ord0250 2025-02-19     Smartphone  Electronics    500         4   \n",
+      "\n",
+      "     Total Sales  Customer Name Customer Location Payment Method     Status  \\\n",
+      "0            180     Emma Clark          New York     Debit Card  Cancelled   \n",
+      "1            400  Emily Johnson     San Francisco     Debit Card    Pending   \n",
+      "2            120       John Doe            Denver     Amazon Pay  Cancelled   \n",
+      "3            180  Olivia Wilson            Dallas    Credit Card    Pending   \n",
+      "4            450     Emma Clark          New York     Debit Card    Pending   \n",
+      "..           ...            ...               ...            ...        ...   \n",
+      "245           40  Daniel Harris             Miami     Debit Card  Cancelled   \n",
+      "246           40  Sophia Miller            Dallas     Debit Card  Cancelled   \n",
+      "247           40    Chris White            Denver     Debit Card  Cancelled   \n",
+      "248          450  Emily Johnson          New York     Debit Card  Cancelled   \n",
+      "249         2000  Emily Johnson           Seattle     Amazon Pay  Completed   \n",
+      "\n",
+      "     Year     Month  Day       State  \n",
+      "0    2025     March   14    New York  \n",
+      "1    2025     March   20  California  \n",
+      "2    2025  February   15    Colorado  \n",
+      "3    2025  February   19       Texas  \n",
+      "4    2025     March   10    New York  \n",
+      "..    ...       ...  ...         ...  \n",
+      "245  2025     March   17     Florida  \n",
+      "246  2025     March   30       Texas  \n",
+      "247  2025     March    5    Colorado  \n",
+      "248  2025     March    8    New York  \n",
+      "249  2025  February   19  Washington  \n",
+      "\n",
+      "[250 rows x 15 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import requests\n",
+    "# import pandas as pd\n",
+    "# from geopy.geocoders import Nominatim\n",
+    "# from geopy.extra.rate_limiter import RateLimiter\n",
+    "\n",
+    "# # Inicializar geolocalizador\n",
+    "# geolocator = Nominatim(user_agent=\"geoapi\", timeout=10)\n",
+    "# geocode = RateLimiter(geolocator.geocode, min_delay_seconds=1)\n",
+    "\n",
+    "# # Función para obtener el estado\n",
+    "# def get_state(city):\n",
+    "#     try:\n",
+    "#         location = geocode(f\"{city}, United States\", addressdetails=True)\n",
+    "#         if location and \"state\" in location.raw.get(\"address\", {}):\n",
+    "#             return location.raw[\"address\"][\"state\"]\n",
+    "#         return None\n",
+    "#     except Exception as e:\n",
+    "#         return None\n",
+    "\n",
+    "# # Crear nueva columna con el estado\n",
+    "# datos[\"State\"] = datos[\"Customer Location\"].apply(get_state)\n",
+    "\n",
+    "# print(datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "d21f78e4",
    "metadata": {},
    "outputs": [],
